sample fermented product to test page layout

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,17 @@ a {
     background: black;
   }
 }
+
+
+thead {
+  @apply bg-gray-300 border-gray-300 border-2
+}
+
+th {
+  @apply px-2
+}
+
+
+td {
+  @apply px-2 border-gray-300 border-2
+}
