--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,8 +9,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #f5f5f5;
-  color: #101010
+  background-color: #182133;
+  color: #f5f5f5;
 }
 
 a {
@@ -23,11 +23,16 @@ a {
 }
 
 .button {
- @apply  bg-green-500 text-white text-lg font-bold p-2 rounded-md hover:scale-105 hover:drop-shadow-md
+ @apply  bg-green-700 text-white text-lg font-bold p-2 rounded-md hover:scale-105 hover:drop-shadow-md
 }
 
 .button-disabled {
  @apply  bg-gray-400 text-white text-lg font-bold p-2 rounded-md 
+}
+
+input,
+select {
+  @apply bg-gray-700
 }
 
 table {
@@ -35,7 +40,7 @@ table {
 }
 
 thead {
-  @apply bg-gray-300 border-gray-300 border-2
+  @apply bg-gray-800 border-gray-500 border-2
 }
 
 th {
@@ -44,7 +49,7 @@ th {
 
 
 td {
-  @apply px-2 border-gray-300 border-2 text-center
+  @apply px-2 bg-gray-700 border-gray-500 border-2 text-center
 }
 
 nav > ul > li {
