reports for batching can be generated and finalized. reports can not yet be printed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,6 +25,9 @@ a {
 .button {
  @apply  bg-green-500 text-white text-lg font-bold p-2 rounded-md hover:scale-105 hover:drop-shadow-md
 }
+.button-red {
+ @apply  bg-red-700 text-white text-lg font-bold p-2 rounded-md hover:scale-105 hover:drop-shadow-md
+}
 
 .button-disabled {
  @apply  bg-gray-400 text-white text-lg font-bold p-2 rounded-md 
