--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,10 @@ a {
   box-sizing: border-box;
 }
 
+textarea {
+  padding: 0.5em;
+}
+
 .button {
  @apply  bg-green-500 text-white text-lg font-bold p-2 rounded-md hover:scale-105 hover:drop-shadow-md
 }
