--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,16 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #f5f5f5;
-  color: #101010
+  color: #101010;
+  min-height: 100%;
+}
+
+body {
+  min-height: 100vh;
+}
+
+#__next {
+  min-height: 100%;
 }
 
 a {
