--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,23 @@ body {
   min-height: 100%;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -65,4 +82,48 @@ td {
 
 nav > ul > li {
   @apply text-3xl underline-offset-8 hover:underline 
+}
+
+h1, h2, h3, h4 {
+  font-weight: 600;
+}
+
+h1 {
+  font-size: 1.8em;
+}
+
+h2 {
+  font-size: 1.4em;
+}
+
+h3 {
+  font-size: 1.15em;
+}
+
+.markdown > ul,
+.markdown > ul > li > ul > li > ul {
+  list-style: disc;
+}
+
+.markdown > ul > li > ul {
+  list-style:  circle;
+}
+
+.markdown > ul > li,
+.markdown > ul > li > ul > li,
+.markdown > ul > li > ul > li > ul > li {
+  margin-left: 1em;
+}
+
+.markdown a:link {
+  text-decoration: underline;
+}
+
+.markdown a:hover {
+  font-weight: bold;
+}
+
+.markdown hr {
+  border-top: 4px dashed #888;
+  margin: 1em;
 }
