--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ body {
   background-color: #f5f5f5;
   color: #101010;
   min-height: 100%;
+  overflow-y: overlay;
 }
 
 body {
@@ -50,6 +51,11 @@ a {
 
 textarea {
   padding: 0.5em;
+}
+
+nav a {
+  color: #eee;
+  opacity: 1;
 }
 
 .button {
@@ -126,4 +132,9 @@ h3 {
 .markdown hr {
   border-top: 4px dashed #888;
   margin: 1em;
+}
+
+input[type=text] {
+  width: 100%;
+  text-align: center;
 }
