--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,6 +42,10 @@ body {
 
 a {
   color: inherit;
+  text-decoration: underline;
+}
+
+nav a {
   text-decoration: none;
 }
 
@@ -51,11 +55,6 @@ a {
 
 textarea {
   padding: 0.5em;
-}
-
-nav a {
-  color: #eee;
-  opacity: 1;
 }
 
 .button {
