--- a/styles/globals.css
+++ b/styles/globals.css
@@ -114,6 +114,10 @@ h3 {
   padding-block: 0.1em;
 }
 
+.markdown p {
+  padding-bottom: 1em;
+}
+
 .markdown > h1,
 .markdown > h2,
 .markdown > h3,
